update the index mechanic page

--- a/src/app/page/index-mechanic/index-mechanic.component.html
+++ b/src/app/page/index-mechanic/index-mechanic.component.html
@@ -1,1 +1,90 @@
 <app-menubar-mechanic />
+<main>
+  <div style="display: flex;padding-top: 30px;">
+    <div style="padding-left: 2%;width: 65%;">
+      <h4>Unassigned reservation</h4>
+      <div class="reservation">
+        <div>
+          <div>19 March 2025 11h - 19 March 2025 12h</div>
+          <div>Rojo Rabe</div>
+          <div>Brake replacment + check-in</div>
+        </div>
+        <div style="display: flex; padding-left: 70%; padding-top: 30px;">
+          <div>
+            <button class="assign">Assign</button>
+          </div>
+        </div>
+      </div>
+      <div class="reservation">
+        <div>
+          <div>19 March 2025 11h - 19 March 2025 12h</div>
+          <div>Rojo Rabe</div>
+          <div>Brake replacment + check-in</div>
+        </div>
+        <div style="display: flex; padding-left: 70%; padding-top: 30px;">
+          <div>
+            <button class="assign">Assign</button>
+          </div>
+        </div>
+      </div>
+      <div class="reservation">
+        <div>
+          <div>19 March 2025 11h - 19 March 2025 12h</div>
+          <div>Rojo Rabe</div>
+          <div>Brake replacment + check-in</div>
+        </div>
+        <div style="display: flex; padding-left: 70%; padding-top: 30px;">
+          <div>
+            <button class="assign">Assign</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div  class="agenda">
+      <h4 align="center">Your agenda</h4>
+      <div align="center"><button class="prev"><</button> 18 March 2024 <button class="next">></button></div>
+
+      <div class="agenda-items">
+        <div class="agenda-item">
+          <div class="hour">
+            8h - 10h
+          </div>
+          <div class="description">
+            <div>reservation : Rakoto</div>
+            <div>Tyre change/oil change</div>
+          </div>
+          <div style="padding-left: 39%;">
+            <button class="finished" disabled>Finished</button>
+          </div>
+        </div>
+        <hr>
+        <div class="agenda-item">
+          <div class="hour">
+            8h - 10h
+          </div>
+          <div class="description">
+            <div>reservation : Rakoto</div>
+            <div>Tyre change/oil change</div>
+          </div>
+          <div style="padding-left: 39%;">
+            <button class="in-progress">In progress</button>
+          </div>
+        </div>
+        <hr>
+        <div class="agenda-item">
+          <div class="hour">
+            8h - 10h
+          </div>
+          <div class="description">
+            <div>reservation : Rakoto</div>
+            <div>Tyre change/oil change</div>
+          </div>
+          <div style="padding-left: 39%;">
+            <button class="not-started">Not started</button>
+          </div>
+        </div>
+        <hr>
+      </div>
+    </div>
+  </div>
+</main>
