--- a/src/app/page/index-mechanic/index-mechanic.component.html
+++ b/src/app/page/index-mechanic/index-mechanic.component.html
@@ -3,35 +3,11 @@
   <div style="display: flex;padding-top: 30px;">
     <div style="padding-left: 2%;width: 65%;">
       <h4>Unassigned reservation</h4>
-      <div class="reservation">
+      <div *ngFor="let reservation of reservations" class="reservation">
         <div>
-          <div>19 March 2025 11h - 19 March 2025 12h</div>
-          <div>Rojo Rabe</div>
-          <div>Brake replacment + check-in</div>
-        </div>
-        <div style="display: flex; padding-left: 70%; padding-top: 30px;">
-          <div>
-            <button class="assign">Assign</button>
-          </div>
-        </div>
-      </div>
-      <div class="reservation">
-        <div>
-          <div>19 March 2025 11h - 19 March 2025 12h</div>
-          <div>Rojo Rabe</div>
-          <div>Brake replacment + check-in</div>
-        </div>
-        <div style="display: flex; padding-left: 70%; padding-top: 30px;">
-          <div>
-            <button class="assign">Assign</button>
-          </div>
-        </div>
-      </div>
-      <div class="reservation">
-        <div>
-          <div>19 March 2025 11h - 19 March 2025 12h</div>
-          <div>Rojo Rabe</div>
-          <div>Brake replacment + check-in</div>
+          <div>{{displayDateWithHour(reservation.reservationDate)}} - {{displayDateWithHour(reservation.endReservation)}}</div>
+          <div>{{reservation.result.name}}</div>
+          <div>{{reservation.result.description}}</div>
         </div>
         <div style="display: flex; padding-left: 70%; padding-top: 30px;">
           <div>
