--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -30,29 +30,6 @@
   </div>
   <!-- preloader end -->
 
-  <!--Search Popup-->
-  <div id="search-popup" class="search-popup">
-    <div class="popup-inner">
-      <div class="upper-box clearfix">
-        <figure class="logo-box pull-left"><a href="index.html"><img src="assets-bosh/images/logo.png" alt="logo"></a></figure>
-        <div class="close-search pull-right"><img src="assets-bosh/images/icons/close.png" alt="close"></div>
-      </div>
-      <div class="overlay-layer"></div>
-      <div class="auto-container">
-        <div class="search-form">
-          <form method="post" action="https://wpsection.com/html/bosch/index.html">
-            <div class="form-group">
-              <fieldset>
-                <input type="search" class="form-control" name="search-input" value="" placeholder="Type your keyword and hit" required >
-                <button type="submit"><i class="far fa-search"></i></button>
-              </fieldset>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <!-- Page Title -->
   <section class="page-title p_relative centred">
     <div class="pattern-layer">
@@ -75,110 +52,42 @@
   <!-- contact form -->
   <div class="contact-form">
     <div class="contact-map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.5404234826947!2d-0.12212862307507602!3d51.50330061100239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604b900d26973%3A0x4291f3172409ea92!2slastminute.com%20London%20Eye!5e0!3m2!1sen!2sbd!4v1686136382336!5m2!1sen!2sbd" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <img src="assets-bosh/images/fond-1.jpg">
     </div>
     <div class="map-shape">
       <div class="pattern-map" style="background-image: url(assets-bosh/images/shape/map-shape.png);"></div>
     </div>
     <div class="contact-form-wrapper">
-      <form>
-        <input type="text" name="name" class="contact-input common-input" placeholder="Your Address">
-        <input type="email" name="name" class="contact-input common-input" placeholder="Email Adress">
-        <input type="text" name="name" class="contact-input address-input" placeholder="Your Address">
-        <textarea name="textarea" class="contact-input">Message</textarea>
-        <button type="submit" class="theme-btn btn-style-one">Send Message</button>
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <input type="email" name="email" class="contact-input ui-spinner-input" placeholder="Email" formControlName="email" required>
+        <input type="password" name="password" class="contact-input ui-spinner-input" placeholder="Password" formControlName="password" required>
+
+        <div *ngIf="errorMessage" class="error-message">
+          {{ errorMessage }}
+        </div>
+        <button
+          type="submit"
+          class="theme_btn_2 btn-dark"
+          style="color: white;"
+          [disabled]="loginForm.invalid || isLoading"
+        >
+          @if (isLoading) {
+            <span class="spinner-border spinner-border-sm"></span>
+            Connexion...
+          } @else {
+            Se connecter
+          }
+        </button>
+
+        <div class="mt-3">
+          <a routerLink="/auth/forgot-password">Mot de passe oublié ?</a>
+        </div>
       </form>
     </div>
   </div>
   <!-- contact form -->
 
-
-  <!--Main Footer-->
-  <footer class="main-footer-one">
-    <div class="upper-box">
-      <div class="auto-container">
-        <div class="outer-box">
-          <p>FREE Delivery over $49. Fulfilled by Bosch. </p>
-          <p>Super discount for your first purchase </p>
-        </div>
-      </div>
-    </div>
-    <div class="lower-box">
-      <div class="auto-container">
-        <div class="row">
-          <div class="col-lg-3 col-md-6">
-            <div class="footer-widget footer-logo-widget">
-              <div class="footer-logo">
-                <img src="assets-bosh/images/logo-2.png" alt="logo">
-              </div>
-              <P>I have been a loyal customer of this auto parts company for years and I cannot recommend them enough. </P>
-              <ul class="social-icon">
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-2 col-md-6 offset-lg-1">
-            <div class="footer-widget footer-links-widget">
-              <h4 class="footer-widget-title">Useful Links</h4>
-              <ul class="lsit">
-                <li><a href="#">All properties</a></li>
-                <li><a href="#">FAQ’s</a></li>
-                <li><a href="#">Terms & Conditions</a></li>
-                <li><a href="#">Sign up</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="footer-widget footer-services-links-widget">
-              <h4 class="footer-widget-title">Why buy from us</h4>
-              <ul class="lsit">
-                <li><a href="#">Business Planning </a></li>
-                <li><a href="#">Human Resources</a></li>
-                <li><a href="#">Bonds & Com modities</a></li>
-                <li><a href="#">Financial Projections</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="footer-widget footer-contact-widget">
-              <h4 class="footer-widget-title">Get In Touch</h4>
-              <ul>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="tel:(+123)45678900" class="footer-contact-info">(+123) 456789 00</a></li>
-                <li><a href="mailto:sample@example.com" class="footer-contact-info">Youremailinfo.com</a></li>
-                <li><a href="#0">Our Address:</a></li>
-                <li><a href="#0">4140 Parker Rd. Allentown, New <br> Mexico 31134</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="footer-bottom-one">
-      <div class="auto-container">
-        <div class="row m-0 align-items-center justify-content-between">
-          <div class="copyright-text">Copyright © 2023 <span>Bosch</span>. All rights reserved.</div>
-          <div class="copyright-card">
-            <h6>We accept :</h6>
-            <a href="#"><img src="assets-bosh/images/icons/card-1.png" alt="card"></a>
-            <a href="#"><img src="assets-bosh/images/icons/card-2.png" alt="card"></a>
-            <a href="#"><img src="assets-bosh/images/icons/card-3.png" alt="card"></a>
-            <a href="#"><img src="assets-bosh/images/icons/card-4.png" alt="card"></a>
-          </div>
-          <ul class="menu">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">FAQ’s</a></li>
-            <li><a href="#">Privacy Policy </a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </footer>
-  <!--End Main Footer-->
+  <app-footer />
 
   <!--Scroll to top-->
   <div class="scroll-to-top">
