--- a/src/assets-bosh/css/element_css/time-travel.css
+++ b/src/assets-bosh/css/element_css/time-travel.css
@@ -46,7 +46,7 @@
     position: relative;
     width: 100%;
     height: 367px;
-    background: url(../../../../../assets-bosh/images/add/time-travel.html) no-repeat;
+    background: url(../../images/add/time-travel.jpg) no-repeat;
     background-size: cover;
     border-radius: 10px;
 }
