--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
     <div class="auto-container">
       <div class="outer-box">
         <p>ANDRIAMAMONJY Johanesa Tiavina</p>
-        <p>RAKOTOARISOA Manitra Nomena</p>
+        <p>RAKOTOARISOA Mamiherimanitra Nomenjanahary</p>
       </div>
     </div>
   </div>
