--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,34 +1,6 @@
 <div class="boxed_wrapper">
 
-  <!-- preloader -->
-  <div class="loader-wrap">
-    <div class="preloader">
-      <div class="preloader-close">x</div>
-      <div id="handle-preloader" class="handle-preloader home-16" style="background-image: url(assets-bosh/images/banner/banner-4.jpg);">
-        <div class="animation-preloader">
-          <div class="spinner"></div>
-          <div class="txt-loading">
-                            <span data-text-preloader="b" class="letters-loading">
-                                b
-                            </span>
-            <span data-text-preloader="o" class="letters-loading">
-                                o
-                            </span>
-            <span data-text-preloader="s" class="letters-loading">
-                                s
-                            </span>
-            <span data-text-preloader="c" class="letters-loading">
-                                c
-                            </span>
-            <span data-text-preloader="h" class="letters-loading">
-                                h
-                            </span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- preloader end -->
+  <app-loader />
 
   <!--Search Popup two-->
   <div id="menupop" class="menupop">
