change design liste des produits

--- a/src/app/page/manager/list-product/list-product.component.html
+++ b/src/app/page/manager/list-product/list-product.component.html
@@ -1,6 +1,7 @@
 <app-menubar-manager />
 
 <main>
+  <div class="title"><h2>Liste des produits avec les stocks disponibles</h2></div>
   <table>
     <thead>
     <tr>
