--- a/src/app/page/manager/list-product/list-product.component.html
+++ b/src/app/page/manager/list-product/list-product.component.html
@@ -2,34 +2,37 @@
 
 <main>
   <div class="title"><h2>Liste des produits avec les stocks disponibles</h2></div>
-  <table>
-    <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th>Category</th>
-      <th>Stock</th>
-      <th>Limite avant notification</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let product of products" align="center">
-      <td>{{product.name}}</td>
-      <td>{{product.description}}</td>
-      <td>{{product.price}}</td>
-      <td>{{product.category}}</td>
+  <div align="right"><button class="add">New Product</button></div>
+  <div style="padding-top: 30px">
+    <table>
+      <thead>
+      <tr>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Price</th>
+        <th>Category</th>
+        <th>Stock</th>
+        <th>Limite avant notification</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let product of products" align="center">
+        <td>{{product.name}}</td>
+        <td>{{product.description}}</td>
+        <td>{{product.price}}</td>
+        <td>{{product.category}}</td>
 
-      <td *ngIf="product.result !== undefined">{{product.result.stockQuantity}}</td>
-      <td *ngIf="product.result !== undefined">{{product.result.threshold}}</td>
+        <td *ngIf="product.result !== undefined">{{product.result.stockQuantity}}</td>
+        <td *ngIf="product.result !== undefined">{{product.result.threshold}}</td>
 
-      <td *ngIf="product.result === undefined" style="color: red;">Aucun</td>
-      <td *ngIf="product.result === undefined" style="color: red;">Aucun</td>
-      <td *ngIf="product.result === undefined"><button class="add">Add stock</button></td>
+        <td *ngIf="product.result === undefined" style="color: red;">Aucun</td>
+        <td *ngIf="product.result === undefined" style="color: red;">Aucun</td>
+        <td *ngIf="product.result === undefined"><button class="add">Add stock</button></td>
 
-      <td><button class="update">Update</button></td>
-      <td><button class="delete">Delete</button></td>
-    </tr>
-    </tbody>
-  </table>
+        <td><button class="update">Update</button></td>
+        <td><button class="delete">Delete</button></td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
 </main>
