update menubar link

--- a/src/app/components/menubar-manager/menubar-manager.component.html
+++ b/src/app/components/menubar-manager/menubar-manager.component.html
@@ -6,7 +6,7 @@
         <!--Logo-->
         <div class="logo_menu">
           <div class="logo-box">
-            <div class="logo"><a href="index.html"><img src="assets/images/logo-2.png" alt="logo"></a></div>
+            <div class="logo"><a href="/manager"><img src="assets/images/logo-2.png" alt="logo"></a></div>
           </div>
         </div>
 
