--- a/src/app/page/manager/list-product/list-product.component.html
+++ b/src/app/page/manager/list-product/list-product.component.html
@@ -29,8 +29,8 @@
         <td *ngIf="product.result === undefined" style="color: red;">Aucun</td>
         <td *ngIf="product.result === undefined"><button class="add">Add stock</button></td>
 
-        <td><button class="update">Update</button></td>
-        <td><button class="delete">Delete</button></td>
+        <td><button class="update" (click)="linkUpdate(product._id)">Update</button></td>
+        <td><button class="delete" (click)="delete(product._id)">Delete</button></td>
       </tr>
       </tbody>
     </table>
