move to product folder

--- a/src/app/page/manager/product/list-product/list-product.component.html
+++ b/src/app/page/manager/product/list-product/list-product.component.html
@@ -2,7 +2,7 @@
 
 <main>
   <div class="title"><h2>Liste des produits avec les stocks disponibles</h2></div>
-  <div align="right"><button class="add">New Product</button></div>
+  <div align="right"><a href="/manager/create/product"><button class="add">New Product</button></a></div>
   <div style="padding-top: 30px">
     <table>
       <thead>
