create design for the stock of a product

--- a/src/app/page/manager/product/create-product/create-product.component.html
+++ b/src/app/page/manager/product/create-product/create-product.component.html
@@ -1,14 +1,14 @@
 <app-menubar-manager />
 
 <main style="padding-top: 50px;padding-left: 25%">
-  <div><h1>Create produit </h1></div>
+  <div><h1>Create product </h1></div>
   <div>
     <table style="width: 75%">
       <tr>
         <td>Name :</td>
         <td>Description :</td>
         <td>Price :</td>
-        <td>Catgory :</td>
+        <td>Category :</td>
       </tr>
       <tr>
         <td><input type="text" value="{{product.name}}" [(ngModel)]="product.name" /></td>
