--- a/src/app/page/manager/product/list-product/list-product.component.css
+++ b/src/app/page/manager/product/list-product/list-product.component.css
@@ -47,3 +47,12 @@ tr{
 tr:nth-child(even) {
   background-color: #efeaea;
 }
+
+.header{
+  display: flex;
+  padding-top: 5px;
+}
+
+.item{
+  padding: 10px;
+}
