config header and js for home

--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -2,6 +2,8 @@
 
   <app-loader />
 
+  <app-header [activeMenu]="currentActiveMenu" />
+
   <!-- Page Title -->
   <section class="page-title p_relative centred">
     <div class="pattern-layer">
