--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -76,22 +76,22 @@
                     <ul class="nav nav-tabs tab-btn-style-one" role="tablist">
                       <li class="nav-item">
                         <a class="nav-link active" id="tab-one-area" data-toggle="tab" href="#tab-one" role="tab" aria-controls="tab-one" aria-selected="false">
-                          <h6>Wheel Bearings</h6>
+                          <h6>Pneumatique</h6>
                         </a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" id="tab-two-area" data-toggle="tab" href="#tab-two" role="tab" aria-controls="tab-two" aria-selected="false">
-                          <h6>Wheel Rim Screws</h6>
+                          <h6>Liquide</h6>
                         </a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" id="tab-three-area" data-toggle="tab" href="#tab-three" role="tab" aria-controls="tab-three" aria-selected="false">
-                          <h6>Wheel Simulators</h6>
+                          <h6>Moteur</h6>
                         </a>
                       </li>
                     </ul>
                     <div class="common-more-btn">
-                      <a href="#">View More <i class="flaticon-right-arrow"></i></a>
+                      <a href="/client/products">View More <i class="flaticon-right-arrow"></i></a>
                     </div>
                   </div>
                 </div>
