--- a/src/app/page/manager/product/update-product/update-product.component.html
+++ b/src/app/page/manager/product/update-product/update-product.component.html
@@ -1,20 +1,33 @@
 <app-menubar-manager />
 
 <main style="padding-top: 50px;padding-left: 25%">
-  <div><h1>Update produit avec id : {{product._id}}</h1></div>
+  <div><h1>Update produit avec id : {{productStock._id}}</h1></div>
   <div>
     <table style="width: 75%">
       <tr>
         <td>Name :</td>
         <td>Description :</td>
         <td>Price :</td>
-        <td>Catgory :</td>
+        <td>Category :</td>
+        <td>Picture</td>
+        @if(productStock.result)
+        {
+          <td>Quantity</td>
+          <td>Threshold</td>
+        }
       </tr>
       <tr>
-        <td><input type="text" value="{{product.name}}" [(ngModel)]="product.name" /></td>
-        <td><input type="text" value="{{product.description}}" [(ngModel)]="product.description" /></td>
-        <td><input type="number" value="{{product.price}}" [(ngModel)]="product.price" /></td>
-        <td><input type="text" value="{{product.category}}" [(ngModel)]="product.category" /></td>
+        <td><input type="text" value="{{productStock.name}}" [(ngModel)]="productStock.name" /></td>
+        <td><input type="text" value="{{productStock.description}}" [(ngModel)]="productStock.description" /></td>
+        <td><input type="number" value="{{productStock.price}}" [(ngModel)]="productStock.price" /></td>
+        <td><input type="text" value="{{productStock.category}}" [(ngModel)]="productStock.category" /></td>
+        <td><input type="file" value="{{productStock.image}}" [(ngModel)]="productStock.image" /></td>
+
+        @if(productStock.result)
+        {
+          <td><input type="number" value="{{productStock.result.stockQuantity}}" [(ngModel)]="productStock.result.stockQuantity" /></td>
+          <td><input type="number" value="{{productStock.result.threshold}}" [(ngModel)]="productStock.result.threshold" /></td>
+        }
         <td><button (click)="updateProduct()">Update</button></td>
       </tr>
     </table>
