change service link to service list link

--- a/src/app/page/manager/index-manager/index-manager.component.html
+++ b/src/app/page/manager/index-manager/index-manager.component.html
@@ -3,6 +3,6 @@
 <main style="display: flex">
   <app-backoffice-item [icon]="'assets/images/mechanic.png'"  [name]="'Mécaniciens'" [link]="'/'"/>
   <app-backoffice-item [icon]="'assets/images/box.png'"  [name]="'Products'" [link]="'/manager/products'"/>
-  <app-backoffice-item [icon]="'assets/images/technical-support.png'"  [name]="'Services'" [link]="'/'"/>
+  <app-backoffice-item [icon]="'assets/images/technical-support.png'"  [name]="'Services'" [link]="'/manager/services'"/>
 </main>
 
