service creation design

--- a/src/app/page/manager/product/create-product/create-product.component.html
+++ b/src/app/page/manager/product/create-product/create-product.component.html
@@ -16,7 +16,7 @@
         <td><input type="number" value="{{product.price}}" [(ngModel)]="product.price" /></td>
         <td><input type="text" value="{{product.category}}" [(ngModel)]="product.category" /></td>
         <td><input type="file" (change)="getFileInformation($event)" /></td>
-        <td><button (click)="createProduct()">Update</button></td>
+        <td><button (click)="createProduct()">Create</button></td>
       </tr>
     </table>
   </div>
