add service delete function

--- a/src/app/page/manager/services/list-service/list-service.component.html
+++ b/src/app/page/manager/services/list-service/list-service.component.html
@@ -1,7 +1,7 @@
 <app-menubar-manager />
 
 <main>
-  <div class="title"><h2>Liste des services avec les stocks disponibles</h2></div>
+  <div class="title"><h2>Liste des services</h2></div>
   <div align="right"><a href="/manager/create/service"><button class="add">New Service</button></a></div>
   <div style="padding-top: 30px">
     <table>
@@ -22,7 +22,7 @@
         <td>{{service.duration}}</td>
         <td>{{service.category}}</td>
         <td><button class="update">Update</button></td>
-        <td><button  class="delete" >Delete</button></td>
+        <td><button  class="delete" (click)="deleteService(service._id)">Delete</button></td>
       </tr>
       </tbody>
     </table>
